trying to edit image in about sectino

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ data-config="{'skin':'skins/black/skin.css','volume':50,'autoplay':false,'shuffl
 						<ul>
 							<li><a href="#intro">Hi</a></li>
 							<li><a href="#one">Who am I</a></li>
-							<li><a href="#two">My Classwork</a></li>
+							<li><a href="#two">My Skills</a></li>
 							<li><a href="#three">Get in touch</a></li>
 						</ul>
 					</nav>
@@ -61,12 +61,11 @@ data-config="{'skin':'skins/black/skin.css','volume':50,'autoplay':false,'shuffl
 				<!-- One -->
 					<section id="one" class="wrapper style2 spotlights">
 						<section>
-							<a href="#" class="image"><img src="images/image1.jpg" alt="" data-position="center center" /></a>
+							<a href="#" class="image"><img src="images/image1.jpg" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Nick Wong</h2>
 									<p>I'm a student at Oregon State studying Computer Science. Here i'll try to post my coursework as a Computer Science student</p>
-									
 								</div>
 							</div>
 						</section>
@@ -141,9 +140,6 @@ data-config="{'skin':'skins/black/skin.css','volume':50,'autoplay':false,'shuffl
 									<p>This is a language that I have become interested in.</p>
 								</section>
 							</div>
-							<ul class="actions">
-								<li><a href="#" class="button">Learn more</a></li>
-							</ul>
 						</div>
 					</section>
 
