trying out google icons

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
+		<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+		<link rel="icon" type="image/png" href="https://nickywongdong.github.io/images/favicon_icon.png">
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 	</head>
@@ -121,7 +123,7 @@ data-config="{'skin':'skins/black/skin.css','volume':50,'autoplay':false,'shuffl
 									<p>This is the language that I am most comfortable with.</p>
 								</section>
 								<section>
-									<span class="icon major fa-lock"></span>
+									<span class="material-icons">android</span>
 									<h3>Java</h3>
 									<p>This is a language that I am beginning to learn more about.</p>
 								</section>
@@ -131,7 +133,7 @@ data-config="{'skin':'skins/black/skin.css','volume':50,'autoplay':false,'shuffl
 									<p>This is a language that I have had brief experience with.</p>
 								</section>
 								<section>
-									<span class="icon major fa-desktop"></span>
+									<span class="fas fa-code"></span>
 									<h3>HTML/CSS</h3>
 									<p>This is the language that I used to set up this website.</p>
 								</section>
@@ -169,7 +171,7 @@ data-config="{'skin':'skins/black/skin.css','volume':50,'autoplay':false,'shuffl
 										<li>
 											<h3>Social</h3>
 											<ul class="icons">
-												<li><a href="https://github.com/nickywongdong/resume/wongnichResume2018" class="fa fa-file-text"><span class="label">Resume</span></a></li>
+												<li><a href="https://github.com/nickywongdong/resume/wongnichResume2018" class="fas fa-file-alt"><span class="label">Resume</span></a></li>
 												
 												<li><a href="https://github.com/nickywongdong" class="fa-github"><span class="label">GitHub</span></a></li>
 												<li><a href="https://www.linkedin.com/in/nicholas-wong-5b836091" class="fa-linkedin"><span class="label">LinkedIn</span></a></li>
