updating more icons

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ data-config="{'skin':'skins/black/skin.css','volume':50,'autoplay':false,'shuffl
 							<p>Here are the skills that I've learned through my time at Oregon State.</p>
 							<div class="features">
 								<section>
-									<span class="icon major fa-code"></span>
+									<span class="fab fa-cuttlefish"></span>
 									<h3>C/C++</h3>
 									<p>This is the language that I am most comfortable with.</p>
 								</section>
@@ -128,7 +128,7 @@ data-config="{'skin':'skins/black/skin.css','volume':50,'autoplay':false,'shuffl
 									<p>This is a language that I am beginning to learn more about.</p>
 								</section>
 								<section>
-									<span class="icon major fa-cog"></span>
+									<span class="fab fa-python"></span>
 									<h3>Python</h3>
 									<p>This is a language that I have had brief experience with.</p>
 								</section>
@@ -138,7 +138,7 @@ data-config="{'skin':'skins/black/skin.css','volume':50,'autoplay':false,'shuffl
 									<p>This is the language that I used to set up this website.</p>
 								</section>
 								<section>
-									<span class="icon major fa-diamond"></span>
+									<span class="fab fa-google"></span>
 									<h3>Golang</h3>
 									<p>This is a language that I have become interested in.</p>
 								</section>
