fixing image position

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ data-config="{'skin':'skins/black/skin.css','volume':50,'autoplay':false,'shuffl
 				<!-- One -->
 					<section id="one" class="wrapper style2 spotlights">
 						<section>
-							<a href="#" class="image"><img src="images/me_cordy.jpg" alt="" data-position="top center" /></a>
+							<a href="#" class="image"><img src="images/me_cordy.jpg" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Nick Wong</h2>
