trying to host resume link

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@ data-config="{'skin':'skins/black/skin.css','volume':50,'autoplay':false,'shuffl
 										<li>
 											<h3>Social</h3>
 											<ul class="icons">
-												<li><a href="https://github.com/nickywongdong/resume/wongnichResume2018" class="fas fa-file-alt"><span class="label">Resume</span></a></li>
+												<li><a href="https://github.com/nickywongdong/nickywongdong.github.io/blob/master/resume/wongnichResume2018.pdf" class="fas fa-file-alt"><span class="label">Resume</span></a></li>
 												
 												<li><a href="https://github.com/nickywongdong" class="fa-github"><span class="label">GitHub</span></a></li>
 												<li><a href="https://www.linkedin.com/in/nicholas-wong-5b836091" class="fa-linkedin"><span class="label">LinkedIn</span></a></li>
