moving resume location

--- a/index.html
+++ b/index.html
@@ -143,6 +143,9 @@ data-config="{'skin':'skins/black/skin.css','volume':50,'autoplay':false,'shuffl
 									<p>This is a language that I have become interested in.</p>
 								</section>
 							</div>
+							<ul class="actions">
+								<li><a href="https://github.com/nickywongdong/nickywongdong.github.io/blob/master/resume/wongnichResume2018.pdf" class="button">Download Resume</a></li>
+							</ul>
 						</div>
 					</section>
 
@@ -171,8 +174,6 @@ data-config="{'skin':'skins/black/skin.css','volume':50,'autoplay':false,'shuffl
 										<li>
 											<h3>Social</h3>
 											<ul class="icons">
-												<li><a href="https://github.com/nickywongdong/nickywongdong.github.io/blob/master/resume/wongnichResume2018.pdf" class="fas fa-file-alt"><span class="label">Resume</span></a></li>
-												
 												<li><a href="https://github.com/nickywongdong" class="fa-github"><span class="label">GitHub</span></a></li>
 												<li><a href="https://www.linkedin.com/in/nicholas-wong-5b836091" class="fa-linkedin"><span class="label">LinkedIn</span></a></li>
 											</ul>
