adding one more icon

--- a/index.html
+++ b/index.html
@@ -142,6 +142,11 @@ data-config="{'skin':'skins/black/skin.css','volume':50,'autoplay':false,'shuffl
 									<h3>Golang</h3>
 									<p>This is a language that I have become interested in.</p>
 								</section>
+								<section>
+									<span class="fab fa-git-square"></span>
+									<h3>Git</h3>
+									<p>This is what I use to organize all my coursework and documents.</p>
+								</section>
 							</div>
 							<ul class="actions">
 								<li><a href="https://github.com/nickywongdong/nickywongdong.github.io/blob/master/resume/wongnichResume2018.pdf" class="button">Download Resume</a></li>
