updating resume link

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ data-config="{'skin':'skins/black/skin.css','volume':50,'autoplay':false,'shuffl
 								</section>
 							</div>
 							<ul class="actions">
-								<li><a href="https://github.com/nickywongdong/nickywongdong.github.io/blob/master/resume/wongnichResume2018.pdf" class="button">Download Resume</a></li>
+								<li><a href="nickywongdong.github.io/wongnichResume2018.pdf" class="button">Download Resume</a></li>
 							</ul>
 						</div>
 					</section>
