adding database png

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ data-config="{'skin':'skins/black/skin.css','volume':50,'autoplay':false,'shuffl
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
+							<a href="#" class="image"><img src="images/database.png" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>CS340 - Introduction to Databases</h2>
