adding mobile music link

--- a/index.html
+++ b/index.html
@@ -54,9 +54,11 @@ data-config="{'skin':'skins/black/skin.css','volume':50,'autoplay':false,'shuffl
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
 							<h1>Hi</h1>
-							<p>This is my personal website. Press play at the top to listen to some music.</p>
+							<p>This is my personal website. Press play at the top to listen to some music, or press below if you're on your phone and can't see the playlist.</p>
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">Learn more about me</a></li>
+								<li><a href="https://nickywongdong.github.io/audiojs" class="button scrolly">Phone Music</a></li>
+
 							</ul>
 						</div>
 					</section>
