updating music link, and android studio image

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ data-config="{'skin':'skins/black/skin.css','volume':50,'autoplay':false,'shuffl
 							<p>This is my personal website. Press play at the top to listen to some music, or press below if you're on your phone and can't see the playlist.</p>
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">Learn more about me</a></li>
-								<li><a href="https://nickywongdong.github.io/audiojs" class="button scrolly">Phone Music</a></li>
+								<li><a href="https://nickywongdong.github.io/audiojs" class="button">Phone Music</a></li>
 
 							</ul>
 						</div>
@@ -99,7 +99,7 @@ data-config="{'skin':'skins/black/skin.css','volume':50,'autoplay':false,'shuffl
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/android-studio-logo.png" alt="" data-position="25% 25%" /></a>
+							<a href="#" class="image"><img src="images/android_studio_logo.png" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>CS492 - Mobile Software Development</h2>
