updating mobile dev final link

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ data-config="{'skin':'skins/black/skin.css','volume':50,'autoplay':false,'shuffl
 							<div class="content">
 								<div class="inner">
 									<h2>Nick Wong</h2>
-									<p>I'm a student at Oregon State studying Computer Science. Here i'll try to post my coursework as a Computer Science student</p>
+									<p>I'm a student at Oregon State studying Computer Science. Here, I'll post some of the coursework that I've either completed, or am working on.</p>
 								</div>
 							</div>
 						</section>
@@ -106,7 +106,7 @@ data-config="{'skin':'skins/black/skin.css','volume':50,'autoplay':false,'shuffl
 									<h2>CS492 - Mobile Software Development</h2>
 									<p>In this class I learned to develop basic Android applications using Android Studio. We are currently developing an Android application that automatically generates hashtags based on an image.</p>
 									<ul class="actions">
-										<li><a href="https://github.com/blazerzero/mobiledevfinal" class="button">Hashtag Generator GitHub Link</a></li>
+										<li><a href="https://github.com/OSU-CS492-W18/final-project-team-3-smart-hashtag-generator">Hashtag Generator GitHub Link</a></li>
 										<li><a href="https://github.com/nickywongdong/cs492" class="button">Coursework</a></li>
 									</ul>
 								</div>
