fixing button class in coursework

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	</head>
 
 <!-- SCM Music Player http://scmplayer.co -->
-<script type="text/javascript" src="https://scmplayer.co/script.js" 
+<script type="text/javascript" src="https://scmplayer.co/script.js"
 data-config="{'skin':'skins/black/skin.css','volume':50,'autoplay':false,'shuffle':false,'repeat':1,'placement':'top','showplaylist':false,'playlist':
 [
 {'title':'Kazam ☾- A Story About Time','url':'https://nickywongdong.github.io/music/a_story_about_time.mp3'},
@@ -106,7 +106,7 @@ data-config="{'skin':'skins/black/skin.css','volume':50,'autoplay':false,'shuffl
 									<h2>CS492 - Mobile Software Development</h2>
 									<p>In this class I learned to develop basic Android applications using Android Studio. We are currently developing an Android application that automatically generates hashtags based on an image.</p>
 									<ul class="actions">
-										<li><a href="https://github.com/OSU-CS492-W18/final-project-team-3-smart-hashtag-generator">Hashtag Generator GitHub Link</a></li>
+										<li><a href="https://github.com/OSU-CS492-W18/final-project-team-3-smart-hashtag-generator" class="button">Hashtag Generator GitHub Link</a></li>
 										<li><a href="https://github.com/nickywongdong/cs492" class="button">Coursework</a></li>
 									</ul>
 								</div>
