--- a/index.html
+++ b/index.html
@@ -104,7 +104,9 @@ data-config="{'skin':'skins/black/skin.css','volume':50,'autoplay':false,'shuffl
 							<div class="content">
 								<div class="inner">
 									<h2>CS492 - Mobile Software Development</h2>
-									<p>In this class I learned to develop basic Android applications using Android Studio. We are currently developing an Android application that automatically generates hashtags based on an image.</p>
+									<p>In this class I learned to develop basic Android applications using Android Studio.
+										I am currently working on a weather application that pulls data from OpenWeather.org. 
+										For my final project, I am working with a group to develop an Android application that automatically generates hashtags based on an image.</p>
 									<ul class="actions">
 										<li><a href="https://github.com/OSU-CS492-W18/final-project-team-3-smart-hashtag-generator" class="button">Hashtag Generator GitHub Link</a></li>
 										<li><a href="https://github.com/nickywongdong/cs492" class="button">Coursework</a></li>
