adding wombat music

--- a/wombat/index.html
+++ b/wombat/index.html
@@ -14,6 +14,17 @@
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 	</head>
+
+	<!-- SCM Music Player http://scmplayer.co -->
+	<script type="text/javascript" src="https://scmplayer.co/script.js"
+	data-config="{'skin':'skins/black/skin.css','volume':50,'autoplay':false,'shuffle':false,'repeat':1,'placement':'top','showplaylist':false,'playlist':
+	[
+	{'title':'Alembic - I Fall In Love Too Easily','url':'https://nickywongdong.github.io/wombat/music/Alembic_I_Fall_In_Love_Too_Easily.mp3'},
+	{'title':'Heizzah - It's Okay To Be Sad','url':'https://nickywongdong.github.io/womba/music/heizzah_its-okay-to-be-sad.mp3'},
+	{'title':'Jay Lounge - Gloomy','url':'https://nickywongdong.github.io/wombat/music/jay_lounge_gloomy.mp3'}]}" ></script>
+	<!-- SCM Music Player script end -->
+
+
 	<body>
 
 		<!-- Sidebar -->
