--- a/wombat/index.html
+++ b/wombat/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Hyperspace by HTML5 UP</title>
+		<title>Wombat</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -15,13 +15,18 @@
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 	</head>
 
+
+
 	<!-- SCM Music Player http://scmplayer.co -->
 	<script type="text/javascript" src="https://scmplayer.co/script.js"
 	data-config="{'skin':'skins/black/skin.css','volume':50,'autoplay':false,'shuffle':false,'repeat':1,'placement':'top','showplaylist':false,'playlist':
 	[
-	{'title':'Alembic - I Fall In Love Too Easily','url':'https://nickywongdong.github.io/wombat/music/Alembic_I_Fall_In_Love_Too_Easily.mp3'},
-	{'title':'Heizzah - It's Okay To Be Sad','url':'https://nickywongdong.github.io/womba/music/heizzah_its-okay-to-be-sad.mp3'},
-	{'title':'Jay Lounge - Gloomy','url':'https://nickywongdong.github.io/wombat/music/jay_lounge_gloomy.mp3'}]}" ></script>
+	{'title':'Kazam ☾- A Story About Time','url':'https://nickywongdong.github.io/music/a_story_about_time.mp3'},
+	{'title':'elijah who - so far away','url':'https://nickywongdong.github.io/music/so_far_away.mp3'},
+	{'title':'97SPECIAL - our story','url':'https://nickywongdong.github.io/music/our_story.mp3'},
+	{'title':'Lildeath - %2795','url':'https://nickywongdong.github.io/music/lildeath_95.mp3'},
+	{'title':'linanthem - floral gardens','url':'https://nickywongdong.github.io/music/floral_gardens.mp3'},
+	{'title':'DJ Okawari - Another Sky','url':'https://nickywongdong.github.io/music/another_sky.mp3'}]}" ></script>
 	<!-- SCM Music Player script end -->
 
 
