--- a/wombat/index.html
+++ b/wombat/index.html
@@ -15,18 +15,13 @@
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 	</head>
 
-
-
 	<!-- SCM Music Player http://scmplayer.co -->
 	<script type="text/javascript" src="https://scmplayer.co/script.js"
 	data-config="{'skin':'skins/black/skin.css','volume':50,'autoplay':false,'shuffle':false,'repeat':1,'placement':'top','showplaylist':false,'playlist':
 	[
-	{'title':'Kazam ☾- A Story About Time','url':'https://nickywongdong.github.io/music/a_story_about_time.mp3'},
-	{'title':'elijah who - so far away','url':'https://nickywongdong.github.io/music/so_far_away.mp3'},
-	{'title':'97SPECIAL - our story','url':'https://nickywongdong.github.io/music/our_story.mp3'},
-	{'title':'Lildeath - %2795','url':'https://nickywongdong.github.io/music/lildeath_95.mp3'},
-	{'title':'linanthem - floral gardens','url':'https://nickywongdong.github.io/music/floral_gardens.mp3'},
-	{'title':'DJ Okawari - Another Sky','url':'https://nickywongdong.github.io/music/another_sky.mp3'}]}" ></script>
+	{'title':'Kazam ☾- A Story About Time','url':'https://nickywongdong.github.io/wombat/music/Alembic_I_Fall_In_Love_Too_Easily.mp3'},
+	{'title':'elijah who - so far away','url':'https://nickywongdong.github.io/wombat/music/heizzah_its-okay-to-be-sad.mp3'},
+	{'title':'DJ Okawari - Another Sky','url':'https://nickywongdong.github.io/wombat/music/jay_lounge_gloomy.mp3'}]}" ></script>
 	<!-- SCM Music Player script end -->
 
 
