--- a/wombat/index.html
+++ b/wombat/index.html
@@ -19,9 +19,9 @@
 	<script type="text/javascript" src="https://scmplayer.co/script.js"
 	data-config="{'skin':'skins/black/skin.css','volume':50,'autoplay':false,'shuffle':false,'repeat':1,'placement':'top','showplaylist':false,'playlist':
 	[
-	{'title':'Kazam ☾- A Story About Time','url':'https://nickywongdong.github.io/wombat/music/Alembic_I_Fall_In_Love_Too_Easily.mp3'},
-	{'title':'elijah who - so far away','url':'https://nickywongdong.github.io/wombat/music/heizzah_its-okay-to-be-sad.mp3'},
-	{'title':'DJ Okawari - Another Sky','url':'https://nickywongdong.github.io/wombat/music/jay_lounge_gloomy.mp3'}]}" ></script>
+	{'title':'Alembic_I_Fall_In_Love_Too_Easily','url':'https://nickywongdong.github.io/wombat/music/Alembic_I_Fall_In_Love_Too_Easily.mp3'},
+	{'title':'heizzah_its-okay-to-be-sad','url':'https://nickywongdong.github.io/wombat/music/heizzah_its-okay-to-be-sad.mp3'},
+	{'title':'jay_lounge_gloomy','url':'https://nickywongdong.github.io/wombat/music/jay_lounge_gloomy.mp3'}]}" ></script>
 	<!-- SCM Music Player script end -->
 
 
