adding link to wombat page on main page

--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@ data-config="{'skin':'skins/black/skin.css','volume':50,'autoplay':false,'shuffl
 									<p>This is my senior design project where I am working with 2 others on an infotainment system/black box built on Nvidia's Jetson TX2.</p>
 									<ul class="actions">
 										<li><a href="https://github.com/nickywongdong/wombat" class="button">GitHub Link</a></li>
+										<li><a href="https://nickywongdong.github.io/wombat/" class="button">Wombat Blog</a></li>
 									</ul>
 								</div>
 							</div>
