--- a/wombat/index.html
+++ b/wombat/index.html
@@ -22,6 +22,8 @@
 	{'title':'Alembic_I_Fall_In_Love_Too_Easily','url':'https://nickywongdong.github.io/wombat/music/Alembic_I_Fall_In_Love_Too_Easily.mp3'},
 	{'title':'heizzah_its-okay-to-be-sad','url':'https://nickywongdong.github.io/wombat/music/heizzah_its-okay-to-be-sad.mp3'},
 	{'title':'Jayv_Jin_Jam','url':'https://nickywongdong.github.io/wombat/music/Jayv_Jin_Jam.mp3'},
+	{'title':'bert_caffeine','url':'https://nickywongdong.github.io/wombat/music/bert_caffeine.mp3'},
+	{'title':'Kavv_Untitled','url':'https://nickywongdong.github.io/wombat/music/Kavv_Untitled.mp3'},
 	{'title':'jay_lounge_gloomy','url':'https://nickywongdong.github.io/wombat/music/jay_lounge_gloomy.mp3'}]}" ></script>
 	<!-- SCM Music Player script end -->
 
