updating bluetooth turn signals blog

--- a/wombat/index.html
+++ b/wombat/index.html
@@ -71,7 +71,9 @@
 									<p>The Axolotl will allow the wireless connection of supplemental turn signals. These turn signals will be strips of LEDs, and will be plugged into and controlled by a Raspberry Pi and its GPIO pins.
 									Whenever the uses decides to signal an oncoming turn, the Jetson TX2 will send a signal to the RaspberryPi through a bluetooth connection, which will cause the corresponding
 									strip of LEDs to signal appropriately.</p>
-
+									<ul class="actions">
+										<li><a href="https://github.com/nickywongdong/bluetooth_turn_signals" class="button">Read More</a></li>
+									</ul>
 								</div>
 							</div>
 						</section>
