--- a/wombat/index.html
+++ b/wombat/index.html
@@ -72,7 +72,7 @@
 									Whenever the uses decides to signal an oncoming turn, the Jetson TX2 will send a signal to the RaspberryPi through a bluetooth connection, which will cause the corresponding
 									strip of LEDs to signal appropriately.</p>
 									<ul class="actions">
-										<li><a href="https://github.com/nickywongdong/bluetooth_turn_signals" class="button">Read More</a></li>
+										<li><a href="bluetooth_turn_signals.html" class="button">Read More</a></li>
 									</ul>
 								</div>
 							</div>
