updating sudo apt get message

--- a/wombat/bluetooth_turn_signals.html
+++ b/wombat/bluetooth_turn_signals.html
@@ -44,7 +44,8 @@
 							</p>
 							<p>First the following line was needed to install bluetooth dev capabilities on the Jetson:</p>
 							<pre><code>
-							</code>sudo apt-get install libbluetooth-dev</pre>
+								sudo apt-get install libbluetooth-dev
+							</code></pre>
 							<p>Then the following two files were used and compiled on the Jetson, and Raspberry:</p>
 							<i>Note: the files need to be compiled with the flag "-lbluetooth"</i>
 							<section id="server" class="wrapper">
