--- a/wombat/bluetooth_turn_signals.html
+++ b/wombat/bluetooth_turn_signals.html
@@ -18,7 +18,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<a href="index.html" class="title">Wombat</a>
+				<a href="index.html" class="title">Axolotl</a>
 				<nav>
 					<ul>
 						<li><a href="index.html">Home</a></li>
