fixing bluetooth streaming blog post

--- a/wombat/index.html
+++ b/wombat/index.html
@@ -82,7 +82,9 @@
 								<div class="inner">
 									<h2>Bluetooth Audio Streaming</h2>
 									<p>The Axolotl will allow the user to connect a device through bluetooth and play audio through speakers connected to the Jetson. The Jetson will use pulseaudio to set the audio, and output devices.</p>
-									<li><a href="bluetooth_streaming.html" class="button">Read More</a></li>
+									<ul class="actions">
+										<li><a href="bluetooth_streaming.html" class="button">Read More</a></li>
+									</ul>
 								</div>
 							</div>
 						</section>
