making some updates to the blog posts, and adding images. Compressed main image with cordy down

--- a/wombat/index.html
+++ b/wombat/index.html
@@ -36,6 +36,7 @@
 					<nav>
 						<ul>
 							<li><a href="#intro">Axolotl</a></li>
+							<li><a href="#zero">Media Player</a></li>
 							<li><a href="#one">Bluetooth Turn Signals</a></li>
 							<li><a href="#two">Bluetooth Audio Streaming</a></li>
 							<li><a href="#three">Auxiliary Media Connection</a></li>
@@ -55,6 +56,9 @@
 							<h1>Team Wombat</h1>
 							<p>Team Wombat consists of Victor Li, Ryan Crane, and Nick Wong.<br />
 							We are working on an infotainment system with black box functionality built upon Nvidia's Jetson TX2.<br />
+							Our project is titled Axolotl for simplification.
+							I'm mainly responsible for implementing the media system on the Axolotl, in addition to a few supplementary goals.
+							<span class="image left"><img src="images/wombat_Alpha_Media.png" alt="" /></span>So far the media system looks something like the screenshot on the left.
 							I'll post updates on the responsibilities that I have on this project as the term progresses.</p>
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">See the Posts</a></li>
@@ -62,7 +66,19 @@
 						</div>
 					</section>
 
-				<!-- One -->
+				<!-- Blog Posts -->
+				<section id="zero" class="wrapper style2 spotlights">
+					<section>
+						<div class="content">
+							<div class="inner">
+								<h2>Media Player</h2>
+								<p>The user will be able to play music of many different formats. This is accomplished by installing a media player which will then be placed inside the main interface. It was decided that VLC media player would be the player that would be used.</p>
+								<ul class="actions">
+									<li><a href="media_player.html" class="button">Read More</a></li>
+								</ul>
+							</div>
+						</div>
+					</section>
 					<section id="one" class="wrapper style2 spotlights">
 						<section>
 							<div class="content">
@@ -93,7 +109,9 @@
 								<div class="inner">
 									<h2>Auxiliary Media Connection</h2>
 									<p>The Axolotl will allow the user to connect a device to the Jetson and play audio over an Auxiliary cable.</p>
-
+									<ul class="actions">
+										<li><a href="aux_media.html" class="button">Read More</a></li>
+									</ul>
 								</div>
 							</div>
 						</section>
@@ -102,7 +120,9 @@
 								<div class="inner">
 									<h2>Networked Media Access</h2>
 									<p>The Jetson will allow the user to connect to a personal computer over a TCP/IP connection, and download media to the internal storage space for later play.</p>
-
+									<ul class="actions">
+										<li><a href="networked_media.html" class="button">Read More</a></li>
+									</ul>
 								</div>
 							</div>
 						</section>
@@ -111,7 +131,9 @@
 								<div class="inner">
 									<h2>FM Radio Receiver</h2>
 									<p>The Axolotl has the capability to receive FM radio signals. This is achieved through the use of an FM radio plugged in through USB. </p>
-
+									<ul class="actions">
+										<li><a href="fm_media.html" class="button">Read More</a></li>
+									</ul>
 								</div>
 							</div>
 						</section>
