left out one section tag

--- a/wombat/index.html
+++ b/wombat/index.html
@@ -52,6 +52,7 @@
 
 				<!-- Intro -->
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
+						<section>
 						<div class="inner">
 							<h1>Team Wombat</h1>
 							<p>Team Wombat consists of Victor Li, Ryan Crane, and Nick Wong.<br />
