--- a/wombat/media_player.html
+++ b/wombat/media_player.html
@@ -38,7 +38,7 @@
                 The media player intallation was as easy as running the line: <br />
                 <code>sudo apt-get install vlc</code>
                 Then the following line is used to open vlc player with a specific directory (in this case the directory "Music"):<br />
-                <i>Later the user should be able to open other directories as well</i>
+                <i>Later the user should be able to open other directories as well</i> <br />
                 <code>vlc --playlist-autostart --loop --playlist-tree Music</code>
               </p>
 						</div>
