updating link messages

--- a/wombat/fm_media.html
+++ b/wombat/fm_media.html
@@ -34,11 +34,11 @@
 						<div class="inner">
 							<h1 class="major">FM Radio</h1>
 							<span class="image fit"><img src="images/wombat_Alpha_Radio.png" alt="" /></span>
-							<p>The FM antenna we used was the USB dongle FM Receiver found here: <a href="https://www.adafruit.com/product/1497?gclid=CjwKCAiAz-7UBRBAEiwAVrz-9V_HFI4jymkhA5_7Y6Rbb0naXSOS8hFiLUn-GCera0PbPrCVG8QG1RoCg5QQAvD_BwE">https://www.adafruit.com/product/1497?gclid=CjwKCAiAz-7UBRBAEiwAVrz-9V_HFI4jymkhA5_7Y6Rbb0naXSOS8hFiLUn-GCera0PbPrCVG8QG1RoCg5QQAvD_BwE</a>.
+							<p>The FM antenna we used was the USB dongle FM Receiver found here: <a href="https://www.adafruit.com/product/1497?gclid=CjwKCAiAz-7UBRBAEiwAVrz-9V_HFI4jymkhA5_7Y6Rbb0naXSOS8hFiLUn-GCera0PbPrCVG8QG1RoCg5QQAvD_BwE">Link to Product</a>.
                 In order to operate on using this antenna, certain drivers needed to be installed.
-              The instructions at <a href="http://osmocom.org/projects/sdr/wiki/rtl-sdr#Using-the-data">http://osmocom.org/projects/sdr/wiki/rtl-sdr#Using-the-data</a>were followed to make sure that the Axolotl was capable of communicating with the antenna.</p>
+              The instructions at <a href="http://osmocom.org/projects/sdr/wiki/rtl-sdr#Using-the-data">Link to rtl_sdr drivers</a>were followed to make sure that the Axolotl was capable of communicating with the antenna.</p>
               <p>Then the software gqrx was installed for interfacing with the radio:<br />
-                <i>note the following instructions here might be necessary to install gqrx properly: <a href"http://gqrx.dk/download/install-ubuntu">http://gqrx.dk/download/install-ubuntu</a> </i><br />
+                <i>note the following instructions here might be necessary to install gqrx properly: <a href"http://gqrx.dk/download/install-ubuntu">Link to gqrx installation</a> </i><br />
               <code>sudo apt-get install gqrx</code></p>
 			</div>
     </section>
