--- a/wombat/index.html
+++ b/wombat/index.html
@@ -61,7 +61,7 @@
 							<span class="image left"><img src="images/wombat_Alpha_Media.png" alt="" /></span>So far the media system looks something like the screenshot on the left.
 							I'll post updates on the responsibilities that I have on this project as the term progresses.</p>
 							<ul class="actions">
-								<li><a href="#one" class="button scrolly">See the Posts</a></li>
+								<li><a href="#zero" class="button scrolly">See the Posts</a></li>
 							</ul>
 						</div>
 					</section>
