adding back utton

--- a/wombat/index.html
+++ b/wombat/index.html
@@ -35,6 +35,7 @@
 				<div class="inner">
 					<nav>
 						<ul>
+							<li><a href="./index.html">Home</a></li>
 							<li><a href="#intro">Axolotl</a></li>
 							<li><a href="#zero">Media Player</a></li>
 							<li><a href="#one">Bluetooth Turn Signals</a></li>
