fixing mp3 link

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <script type="text/javascript" src="https://scmplayer.co/script.js"
 data-config="{'skin':'skins/black/skin.css','volume':50,'autoplay':false,'shuffle':false,'repeat':1,'placement':'top','showplaylist':false,'playlist':
 [
-{'title':'Kid Cudi - Do It Alone','url':'https://nickywongdong.github.io/music/Do_It_Alone'},
+{'title':'Kid Cudi - Do It Alone','url':'https://nickywongdong.github.io/music/Do_It_Alone.mp3'},
 {'title':'Kazam ☾- A Story About Time','url':'https://nickywongdong.github.io/music/a_story_about_time.mp3'},
 {'title':'elijah who - so far away','url':'https://nickywongdong.github.io/music/so_far_away.mp3'},
 {'title':'97SPECIAL - our story','url':'https://nickywongdong.github.io/music/our_story.mp3'},
