adding link to CS340 final project

--- a/index.html
+++ b/index.html
@@ -96,7 +96,8 @@ data-config="{'skin':'skins/black/skin.css','volume':50,'autoplay':false,'shuffl
 									<h2>CS340 - Introduction to Databases</h2>
 									<p>In this class, we are creating our own database and a website to access that database using NodeJS.</p>
 									<ul class="actions">
-										<li><a href="https://github.com/nickywongdong/CS340" class="button">Databases Project</a></li>
+										<li><a href="https://github.com/nickywongdong/CS340" class="button">Databases Project Github Link</a></li>
+										<li><a href="https://wongnich-cs340-destinydb.herokuapp.com/" class="button">Databases Project Link</a></li>
 									</ul>
 								</div>
 							</div>
