--- a/prototype.html
+++ b/prototype.html
@@ -14,12 +14,11 @@
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 	</head>
-  <iframe src="https://marvelapp.com/52ba25g?emb=1&iosapp=false&frameless=false" width="453" height="884" allowTransparency="true" frameborder="0"></iframe>
 	<body>
 
 		<!-- Header -->
 			<header id="header">
-				<a href="index.html" class="title">Axolotl</a>
+				<a href="index.html" class="title">OSU CS Planner App</a>
 				<nav>
 					<ul>
 						<li><a href="index.html">Home</a></li>
@@ -33,7 +32,7 @@
 				<!-- Main -->
 					<section id="main" class="wrapper">
 						<div class="inner">
-							<h1 class="major">Media Player</h1>
+							<h1 class="major">App Demo</h1>
 							<p>
                 Initial tentative prorotype of envisioned app.
               </p>
@@ -41,6 +40,8 @@
 					</section>
 
 			</div>
+		
+		<iframe src="https://marvelapp.com/52ba25g?emb=1&iosapp=false&frameless=false" width="453" height="884" allowTransparency="true" frameborder="0"></iframe>
 
 		<!-- Footer -->
 			<footer id="footer" class="wrapper alt">
