--- a/prototype.html
+++ b/prototype.html
@@ -34,7 +34,7 @@
 						<div class="inner">
 							<h1 class="major">App Demo</h1>
 							<p>
-                Initial tentative prorotype of envisioned app.
+                Initial tentative prototype of envisioned app.
               </p>
 						</div>
 					</section>
